--- a/hobbies.html
+++ b/hobbies.html
@@ -3,13 +3,19 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <title>Contact Me</title>
+        <title>Hobbies</title>
     </head>
     <body>
-        <h1>Contact Me</h1>
+        <h1>My hobbies</h1>
         <hr/>
-        <p>My name: <br/> Claudia Alvarez Flores</p>
-        <p>My email: <br/> claudette.caf@gmail.com</p>
+        <ol>
+            <li>Draw.</li>
+            <li>Watch movies.</li>
+            <li>Code.</li>
+            <li>Listening music.</li>
+            <li>Practice yoga.</li>
+            <li>Go out to the garden.</li>
+        </ol>
         <hr/>
         <a href="./index.html">Home</a>
         <a href="./contact.html">Contact Me</a>
