--- a/index.html
+++ b/index.html
@@ -1,22 +1,65 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
     <head>
-        <meta charset="UTF-8"/>
-        <title>Claudia's Portfolio</title>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <title>My Resume</title>
     </head>
 
     <body>
-        <h1>Claudia's Portfolio</h1>
-        <h2>I am a student of programming</h2>
-        <hr/>
-        <h3><a href="./movie-ranking.html">Movies Ranking Project</a></h3>
-        <img src="./movies-ranking.png" height="200" alt="movie ranking project preview" />
-        <h3><a href="./birthday-invite.html">Birthday Invite Project</a></h3>
-        <img src="./birthday-invite.png" height="200" alt="birthday invite project preview" />
-        <hr/>
-        <a href="./about.html">About Me</a>
-        <a href="./contact.html">Contact Me</a>
-    </body>
 
+        <h1>My Resume</h1>
+        <hr />
+
+        <h3>Objectives</h3>
+        <ol>
+            <li>Start learning programming with a course.</li>
+            <li>Get a certificate on Udemy.</li>
+            <li>Start working as a Web Developer.</li>
+        </ol>
+
+        <h3>Education</h3>
+        <ol>
+            <li>I was studying code in Blockly (2017-2018).</li>
+            <li>I took a course of JavaScript, html, CSS  HTML5 and React on Udemy (2023).</li>
+            <li>I'm taking a course of HTML, JavaScript and CSS on Udemy (2025).</li>
+        </ol>
+
+        <h3>Work experience</h3>
+        <ul>
+            <li>I had a programming course on Udemy and I'm taking another one.</li>
+            <li>I have the responsibility to study programming every day.</li>
+            <li>I have experience with React, JavaScript, HTML, HTML5 and CSS.</li>
+        </ul>
+
+        <h3>Skills</h3>
+        <ul>
+            <li>I know the basics of programming.</li>
+            <li>I can program in JavaScript, CSS, HTML5, HTML and React languages.</li>
+            <li>I can create my own app or website with code.</li>
+            <li>I can draw and create animations with code.</li>
+        </ul>
+
+        <h3>Awards, certifications and achievements</h3>
+        <ul>
+            <li>I learned the basics of programming.</li>
+            <li>I finished a programming course.</li>
+            <li>I have created applications and websites with code.</li>
+        </ul>
+        <p><img src="./img/profile-picture.png" height="200" alt="This is my profile picture (it's a picture of a kitten)." />
+        <br/>(My profile picture).</p>
+        
+        <br/>
+
+        <footer>
+            <p>Claudia Alvarez Flores - All rights reserved.</p>
+        </footer>
+
+        <hr />
+
+        <a href="./hobbies.html">Hobbies</a>
+        <a href="./contact.html">Contact</a>
+
+    </body>
 </html>
