--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <li>I finished a programming course.</li>
             <li>I have created applications and websites with code.</li>
         </ul>
-        <p><img src="./img/profile-picture.png" height="200" alt="This is my profile picture (it's a picture of a kitten)." />
+        <p><img src="./profile-picture.png" height="200" alt="This is my profile picture (it's a picture of a kitten)." />
         <br/>(My profile picture).</p>
         
         <br/>
