--- a/index.html
+++ b/index.html
@@ -1,65 +1,74 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
     <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <title>My Resume</title>
+        <meta charset="UTF-8"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1"/>
+        <link rel="stylesheet" href="./css/style.css"/>
+        <title>Claudia's Web Site</title>
     </head>
-
     <body>
+        <h1>Claudia's Web Site</h1>
 
-        <h1>My Resume</h1>
-        <hr />
-
-        <h3>Objectives</h3>
-        <ol>
-            <li>Start learning programming with a course.</li>
-            <li>Get a certificate on Udemy.</li>
-            <li>Start working as a Web Developer.</li>
-        </ol>
-
-        <h3>Education</h3>
-        <ol>
-            <li>I was studying code in Blockly (2017-2018).</li>
-            <li>I took a course of JavaScript, html, CSS  HTML5 and React on Udemy (2023).</li>
-            <li>I'm taking a course of HTML, JavaScript and CSS on Udemy (2025).</li>
-        </ol>
-
-        <h3>Work experience</h3>
-        <ul>
-            <li>I had a programming course on Udemy and I'm taking another one.</li>
-            <li>I have the responsibility to study programming every day.</li>
-            <li>I have experience with React, JavaScript, HTML, HTML5 and CSS.</li>
-        </ul>
-
-        <h3>Skills</h3>
-        <ul>
-            <li>I know the basics of programming.</li>
-            <li>I can program in JavaScript, CSS, HTML5, HTML and React languages.</li>
-            <li>I can create my own app or website with code.</li>
-            <li>I can draw and create animations with code.</li>
-        </ul>
-
-        <h3>Awards, certifications and achievements</h3>
-        <ul>
-            <li>I learned the basics of programming.</li>
-            <li>I finished a programming course.</li>
-            <li>I have created applications and websites with code.</li>
-        </ul>
-        <p><img src="./profile-picture.png" height="200" alt="This is my profile picture (it's a picture of a kitten)." />
-        <br/>(My profile picture).</p>
-        
+        <br/>
         <br/>
 
-        <footer>
-            <p>Claudia Alvarez Flores - All rights reserved.</p>
-        </footer>
+        <h3>About Me</h3>
+        <img class="profile-picture" src="./img/profile-picture.png" alt="My profile picture" />
+        <p class="text">This is my profile picture</p>
 
-        <hr />
+        <p>I like code, listening music, make animations and drawings with code, practice yoga, etc.
+            <br/> I have experience with JavaScript, CSS, HTML and HTML5 languagues, React and Angular.
+        </p>
 
-        <a href="./hobbies.html">Hobbies</a>
-        <a href="./contact.html">Contact</a>
+        <br/>
+        <br/>
 
+        <h3>My skills</h3>
+        <ol>
+            <li>I'm a learning web developer, but I can create simple programs in JavaScript, CSS, 
+                HTML, HTML5, React and Angular.
+            </li>
+            <br/>
+            <img src="./img/code.gif" />
+            <br/>
+
+            <li>I can also create animations and drawings with code.</li>
+            <br/>
+            <img src="img/animation.gif" />
+            <br/>
+
+            <li>I speak english and spanish.</li>
+            <br/>
+            <img src="./img/languages.avif" />
+        </ol>
+
+        <br/>
+
+        <h3>My experience<h3>
+        <a href="https://claudia-caf.github.io/html-portfolio/">
+            Click here!
+        </a>
+
+        <br/>
+        <br/>
+
+        <h3>About Me</h3>
+        <p class="email">claudette.caf@gmail.com</p>
+
+        <br/>
+        <hr/>
+        <br/>
+
+        <div class="footer">
+            <a class="home" href="http://127.0.0.1:3000/index.html">Home</a>
+            <a class="youtube" href="https://www.youtube.com/channel/UCYnkVjdBlUgpdOuiYatTQJw">YouTube</a>
+            <a class="gihub" href="https://github.com/Claudia-CAF">GitHub</a>
+        </div>
+
+        <br/>
+        
+        <p> © All rights reserved.</p>
+
+        <br/>
     </body>
 </html>
