--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
-        <link rel="stylesheet" href="./css/style.css"/>
+        <link rel="stylesheet" href="style.css"/>
         <title>Claudia's Web Site</title>
     </head>
     <body>
@@ -13,7 +13,7 @@
         <br/>
 
         <h3>About Me</h3>
-        <img class="profile-picture" src="./img/profile-picture.png" alt="My profile picture" />
+        <img class="profile-picture" src="profile-picture.png" alt="My profile picture" />
         <p class="text">This is my profile picture</p>
 
         <p>I like code, listening music, make animations and drawings with code, practice yoga, etc.
@@ -29,17 +29,17 @@
                 HTML, HTML5, React and Angular.
             </li>
             <br/>
-            <img src="./img/code.gif" />
+            <img src="code.gif" />
             <br/>
 
             <li>I can also create animations and drawings with code.</li>
             <br/>
-            <img src="img/animation.gif" />
+            <img src="animation.gif" />
             <br/>
 
             <li>I speak english and spanish.</li>
             <br/>
-            <img src="./img/languages.avif" />
+            <img src="languages.avif" />
         </ol>
 
         <br/>
@@ -60,9 +60,9 @@
         <br/>
 
         <div class="footer">
-            <a class="home" href="http://127.0.0.1:3000/index.html">Home</a>
-            <a class="youtube" href="https://www.youtube.com/channel/UCYnkVjdBlUgpdOuiYatTQJw">YouTube</a>
-            <a class="gihub" href="https://github.com/Claudia-CAF">GitHub</a>
+            <a class="Home" href="http://127.0.0.1:3000/index.html">Home</a>
+            <a class="Youtube" href="https://www.youtube.com/channel/UCYnkVjdBlUgpdOuiYatTQJw">YouTube</a>
+            <a class="GitHub" href="https://github.com/Claudia-CAF">GitHub</a>
         </div>
 
         <br/>
