--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
         <br/>
 
         <div class="footer">
-            <a class="Home" href="http://127.0.0.1:3000/index.html">Home</a>
-            <a class="Youtube" href="https://www.youtube.com/channel/UCYnkVjdBlUgpdOuiYatTQJw">YouTube</a>
-            <a class="GitHub" href="https://github.com/Claudia-CAF">GitHub</a>
+            <a href="http://127.0.0.1:3000/index.html">Home</a>
+            <a href="https://www.youtube.com/channel/UCYnkVjdBlUgpdOuiYatTQJw">YouTube</a>
+            <a href="https://github.com/Claudia-CAF">GitHub</a>
         </div>
 
         <br/>
